# one-tap-away

./: README.md
backend/: .env.example  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
backend/artifacts/: spreadsheet_data.json  system_instructions.md
backend/src/: chat_with_semantic_search.py  load_new_data.py
frontend/: README.md  package-lock.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: AIResponsePanel.tsx  ChatInput.tsx  SendButton.tsx  UserPanel.tsx
frontend/src/services/: backendApiService.ts  streamService.ts
