[project]
name = "one-tap-away-backend"
version = "0.1.0"
description = "Flask backend for One Tap Away"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "google-generativeai>=0.8.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
